# noaa

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  model.rs  units.rs
src/fields/: codes.rs  mandatory.rs  mod.rs
src/fields/optional/: climate_reference_network.rs  cloud_solar.rs  ground_surface.rs  marine.rs  mod.rs  network_metadata.rs  precipitation.rs  pressure.rs  runway_visual_range.rs  sea_surface_temperature.rs  temperature.rs  weather_occourance.rs  weather_occurrence.rs  wind.rs
src/util/: mod.rs
