[package]
name = "noaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
serde_json = "1.0"
phf = { version = "0.10", features = ["macros"] }



[dependencies.serde_with]
version = "1.14.0"

[profile.release]
opt-level = 3
debug = true
#lto = "fat"

[profile.bench]
debug = true




